2005-04-11 01:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m
	* GormCore/GormObjectEditor.m: Corrected problem with resource
	manager.

2005-04-10 23:59 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Moved call to register IBResourceManager
	here and also correct a memory problem.
	* GormCore/GormObjectEditor.m: Corrected a problem with
	registering the types.

2005-04-10 22:42 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.m
	* GormInfo.plist: Updated version to 0.9.7.

2005-04-10 20:09 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.h
	* GormCore/GormDocument.m: addition of the method
	resourceManagerForPasteboard:.
	* GormCore/GormObjectEditor.m: Changes to utilize IBResourceManager
	* GormLib/IBResourceManager.h
	* GormLib/IBResourceManager.m: Changes to add objects to the document
	properly.

2005-04-10 18:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.h: Organized methods.
	* GormCore/GormDocument.m: Added code here to add to top
	level objects array, when appropriate.
	* GormCore/GormGenericEditor.m: Prevent close when already
	closed.
	* GormCore/GormObjectEditor.m: Removed code which adds
	to document/top level objects, this is done in the document now.
	* GormCore/GormPrivate.h: Added new ivar to GormGenericEditor
	* GormLib/IBResourceManager.h
	* GormLib/IBResourceManager.m: Corrected implementation of 
	register methods.
	* Resources/ClassInformation.plist: Added Object.

2005-04-03 07:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBResourceManager.[hm]: Implementation of this class.

2005-03-30 23:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.m: Update the version of a 
	file, once it's been saved with a new version of Gorm.

2005-03-30 22:43 Gregory John Casamento <greg_casamento@yahoo.com>
